Bug 1098470 - Move manifest.* scope from navigator.getFeature to navigator.hasFeature. r=ehsan